charon/tests/ui/quantified-clause.out
thread 'rustc' panicked at src/bin/charon-driver/translate/translate_predicates.rs:470:17:
assertion failed: trait_ref.bound_vars.is_empty()
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::foo`.
 --> tests/ui/quantified-clause.rs:3:1
  |
3 | / fn foo<F>(_f: F)
4 | | where
5 | |     F: for<'a> FnMut(&'a ()),
  | |_____________________________^

error: Ignoring the following item due to an error: test_crate::foo
 --> tests/ui/quantified-clause.rs:3:1
  |
3 | / fn foo<F>(_f: F)
4 | | where
5 | |     F: for<'a> FnMut(&'a ()),
  | |_____________________________^

error: aborting due to 2 previous errors

Error: Charon driver exited with code 101
